# guardian-circle

./: .gitignore  AGENTS.md  PHASE0_RUNBOOK.md  README.md  docker-compose.yml
.github/workflows/: backend-auth-smoke.yml
apps/mobile/: .env.example  app.json  package-lock.json  package.json
apps/mobile/app/: _layout.tsx  index.tsx  onboarding.tsx
apps/mobile/app/(auth)/: login.tsx  register.tsx
apps/mobile/app/(tabs)/: _layout.tsx  contacts.tsx  home.tsx  index.tsx  settings.tsx
apps/mobile/app/legal/: _layout.tsx  privacy.tsx  terms.tsx
apps/mobile/app/lib/: account.ts  api.ts  auth.ts  location.ts  onboarding.ts  preferences.ts  session.ts  sos.ts
apps/mobile/app/watcher/: [token].tsx
apps/mobile/components/: legal-document-screen.tsx  legal-links.tsx
apps/mobile/utils/: push.ts
backend/: .env.example  pyproject.toml
backend/app/: main.py  smoke_auth.py
backend/app/core/: audit.py  config.py  database.py  rate_limit.py  security.py
backend/app/models/: alert.py  alert_notification.py  contact.py  contact_push_subscription.py  user.py
backend/app/routers/: __init__.py  alerts.py  auth.py  auth_dep.py  contacts.py  watcher_pages.py  ws.py
backend/app/schemas/: alert.py  contact.py  notification.py  user.py  watcher.py
backend/app/services/: alert_expiry.py  notifications.py  watchers.py
backend/guardian_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_rate_limits.py
docs/: DELIVERY_STATUS.md
